# serde-csv-core

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
src/: de.rs  lib.rs  ser.rs  serializer.rs
tests/: main.rs
tests/integration/: de.rs  ser.rs
