[package]
name = "serde-csv-core"
edition = "2021"
version = "0.1.0"
authors = ["Wiktor Więcław <lonevixu@gmail.com>"]
categories = ["embedded", "encoding", "no-std"]
description = "CSV serialization for no_std crates"
documentation = "https://docs.rs/serde-csv-core"
keywords = ["csv", "csv-core", "serde", "serialization"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/wiktorwieclaw/serde-csv-core"

[features]
default = ["heapless"]
heapless = ["dep:heapless"]

[dependencies]
csv-core = "0.1.10"
heapless = { version = "0.7.16", default-features = false, optional = true }
itoa = "1.0.6"
ryu = "1.0.13"
serde = { version = "1.0.159", default-features = false }

[dev-dependencies]
serde = { version = "1.0.159", default-features = false, features = ["derive"] }
