[package]
name = "serde-csv-core"
edition = "2021"
version = "0.1.1"
authors = ["Wiktor Więcław <lonevixu@gmail.com>"]
categories = ["embedded", "encoding", "no-std"]
description = "CSV serialization for no_std crates"
documentation = "https://docs.rs/serde-csv-core"
keywords = ["csv", "csv-core", "serde", "serialization"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/wiktorwieclaw/serde-csv-core"

[features]
default = ["heapless"]
heapless = ["dep:heapless"]

[dependencies]
atoi = { version = "2.0.0", default-features = false }
csv-core = "0.1.10"
heapless = { version = "0.7.16", default-features = false, features = ["serde"], optional = true }
itoa = "1.0.6"
lexical-parse-float = { version = "0.8.5", default-features = false, features = ["compact"] }
ryu = "1.0.13"
serde = { version = "1.0.159", default-features = false }

[dev-dependencies]
serde = { version = "1.0.159", default-features = false, features = ["derive", "std"] }
